add_executable(seg_sweep seg_sweep.cpp)
add_executable(seg_test seg_test.cpp)
add_executable(seg_sweep2 seg_sweep2.cpp)
add_executable(seg_test2 seg_test2.cpp)
add_executable(seg_sweep_g seg_sweep_g.cpp)
add_executable(seg_test_g seg_test_g.cpp)
target_link_libraries(seg_sweep_g PRIVATE pam)
target_link_libraries(seg_test_g PRIVATE pam)
target_link_libraries(seg_sweep PRIVATE pam)
target_link_libraries(seg_test PRIVATE pam)
target_link_libraries(seg_sweep2 PRIVATE pam)
target_link_libraries(seg_test2 PRIVATE pam)
install(TARGETS seg_sweep_g DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)
install(TARGETS seg_test_g DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)
install(TARGETS seg_sweep DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)
install(TARGETS seg_test DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)
install(TARGETS seg_sweep2 DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)
install(TARGETS seg_test2 DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)
